WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162597
WKSharedAPICast should not warn about acceptable custom context menu tag values
https://bugs.webkit.org/show_bug.cgi?id=162597
Summary
WKSharedAPICast should not warn about acceptable custom context menu tag values
Joseph Pecoraro
Reported
2016-09-27 00:06:31 PDT
Summary: WKSharedAPICast should not warn about acceptable custom context menu tag values Steps to Reproduce: 1. Launch MiniBrowser in a Debug build 2. Open a WK2 window. 3. Right click, Inspect Element. 4. Right click on the <body> tag. => LOG_ERROR spew Output: ERROR: ContextMenuAction 5000 is an unknown tag but is below the allowable custom tag value of 10000 Source/WebKit2/Shared/API/c/WKSharedAPICast.h(511) : WKContextMenuItemTag WebKit::toAPI(WebCore::ContextMenuAction) ERROR: ContextMenuAction 5005 is an unknown tag but is below the allowable custom tag value of 10000 Source/WebKit2/Shared/API/c/WKSharedAPICast.h(511) : WKContextMenuItemTag WebKit::toAPI(WebCore::ContextMenuAction) ...
Attachments
[PATCH] Proposed Fix
(2.43 KB, patch)
2016-09-27 00:16 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(2.43 KB, patch)
2016-09-27 21:20 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-09-27 00:06:43 PDT
<
rdar://problem/28487627
>
Joseph Pecoraro
Comment 2
2016-09-27 00:16:01 PDT
Created
attachment 289922
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2016-09-27 21:20:05 PDT
Created
attachment 290056
[details]
[PATCH] Proposed Fix
Tim Horton
Comment 4
2016-09-28 13:16:28 PDT
Comment on
attachment 290056
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=290056&action=review
> Source/WebKit2/Shared/API/c/WKSharedAPICast.h:511 > + if (action < WebCore::ContextMenuItemBaseApplicationTag && !(action >= WebCore::ContextMenuItemBaseCustomTag && action <= WebCore::ContextMenuItemLastCustomTag)) > + LOG_ERROR("ContextMenuAction %i is an unknown tag but is below the allowable custom tag value of %i", action, WebCore::ContextMenuItemBaseApplicationTag);
It's kind of weird that the naming in the error message disagrees with the naming in WebCore ("custom" vs. "application")
WebKit Commit Bot
Comment 5
2016-09-28 13:38:13 PDT
Comment on
attachment 290056
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 290056 Committed
r206540
: <
http://trac.webkit.org/changeset/206540
>
WebKit Commit Bot
Comment 6
2016-09-28 13:38:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug