WKSharedAPICast should not warn about acceptable custom context menu tag values https://bugs.webkit.org/show_bug.cgi?id=162597 <rdar://problem/28487627>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-09-28
Reviewed by Tim Horton.

* Shared/API/c/WKSharedAPICast.h:
(WebKit::toAPI):
(WebKit::toImpl):
Don't log an error when casting ContextMenu types if it is within
the Custom ContextMenu tag range.

Canonical link: https://commits.webkit.org/180635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206540 268f45cc-cd09-0410-ab3c-d52691b4dbfc